# buildteam

./: .dockerignore  AGENTS.md  Dockerfile  EXAMPLES.md  OBSERVABILITY.md  README.md  USAGE.md  docker-entrypoint.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build-push-acr.yml  code-health.yml  deploy-slides.yml
buildteam-build-on/aks/: job.yaml  launch.sh  prepare-spec.sh  secret-provider.yaml
deploy/aks/: README.md  job.yaml  namespace.yaml  prepare-spec.sh  secret-provider.yaml
docs/: buildteam-overview.md  docker.md
scripts/: code_health_check.py  setup-acr-oidc.sh
src/buildteam/: __main__.py  backlog_checker.py  bootstrap.py  builder.py  cli.py  code_analysis.py  git_helpers.py  journeys.py  milestone.py  milestone_reviewer.py  orchestrator.py  planner.py  sentinel.py  terminal.py  tester.py  utils.py  validator.py  version.py  watcher.py
src/buildteam/prompts/: __init__.py  builder.py  reviewer.py  validator.py
tests/: test_backlog_checker.py  test_branch_reviewer.py  test_builder.py  test_cli.py  test_code_analysis.py  test_journeys.py  test_merge_recovery.py  test_milestone.py  test_prompts.py  test_utils.py  test_validator.py
tests/harness/: run_docker_test.sh  run_test.py  sample_spec_azure_storage_api.md  sample_spec_minimal_dotnet_api.md  sample_spec_minimal_node_api.md  sample_spec_minimal_python_api.md
tests/harness/full/: sample_spec_azure_cosmos_api.md  sample_spec_azure_storage_api.md
tests/harness/sample_specs_notes/: README.md
tests/harness/simple/: sample_spec_log_viewer_api.md  (+1 more)
(+14 files in other folders)
